package designpattern.creationalpattern.factory.logisticsexample.interfaces;

public interface Logistics {
    void deliver();
}
